--- a/style.css
+++ b/style.css
@@ -245,8 +245,8 @@ input:hover {
     align-items: center;
 }
 
-.cta-form {
-    padding-bottom: 1%;
+.cta-description {
+    padding-top: 10px;
 }
 
 .cta-description h4 {
